--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class = "info">
             <img alt = "A photo of Charles Reverand against a gray/black backdrop" src="img/profilepicture.jpg"/>
             <div>
-                Hiya! I'm a current junior Computer Science student, dual majoring in GSAS, with a passion for game development.
+                Hiya! I'm a game programmer, focusing on gameplay scenarios. I also have experience in many other areas of game programming and design.
             </div>
         </div>
     </div>
