--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,18 @@
 	<div class="projects">
 		<div class="item">
 			<div class="itemType">
+				<div><span>Under Development</span></div>
+			</div>
+			<span class="itemTitle">Short Fuse</span>
+			<span class="itemTime">Spring 2023 - Present</span>
+			<p class="itemDetail">
+				Director and programming on a rouglike bomb defusal game that builds complex and intriguing scenarios from simple concepts. Resposibilities include scheduling, management, design, documentation, and implementation of the game's core and surrounding features.
+			</p>
+			<p>Find out more <a href="https://www.minitunastudios.com">here</a></p>
+			<img src="img/sf/sf-0.png" />
+		</div>
+		<div class="item">
+			<div class="itemType">
 				<div><span>Experimental Game Design</span></div>
 			</div>
 			<span class="itemTitle">Short Fuse: Company Time</span>
@@ -86,21 +98,6 @@
 			<iframe src="https://itch.io/embed/1916713?dark=true" width="208" height="167" frameborder="0"><a
 					href="https://taliyos.itch.io/krackelacken">Krack-e-lacken by taliyos, Mike, Chad VanPatten,
 					ken10wil</a></iframe>
-		</div>
-		<div class="item">
-			<div class="itemType">
-				<div><span>Experimental Game Design</span></div>
-			</div>
-			<span class="itemTitle">Short Fuse</span>
-			<span class="itemTime">Spring 2023</span>
-			<p class="itemDetail">
-				Programming and Game Design on a one week project where you need to investigate and defuse bombs as fast
-				as possible!
-			</p>
-			<img src="img/sf/sf-0.jpg" />
-			<iframe src="https://itch.io/embed/1886681?dark=true" width="208" height="167" frameborder="0"><a
-					href="https://taliyos.itch.io/short-fuse">Short Fuse by taliyos, ken10wil, Chad VanPatten,
-					Mike</a></iframe>
 		</div>
 		<div class="item">
 			<div class="itemType">
