--- a/work.html
+++ b/work.html
@@ -30,8 +30,15 @@
     </div>
     <div class = "projects">
         <div class = "item">
+            <span class = "itemTitle">Verizon</span>
+            <span class = "itemJob">Software Engineer Intern</span>
+            <span class = "itemTime">June 2023 - August 2023</span>
+            <p class = "itemDetail">Worked as part of My Verizon for Business team. I was responsible for the implementation of new features on the Android app and back-end using Java and Kotlin.</p>
+		</div>
+        <div class = "item">
             <span class = "itemTitle">Eco Resilience Global Games Research Group</span>
-            <span class = "itemJob">Lead Programmer, Associate Designer, Director, & Producer</span>
+            <span class = "itemJob">Consultant (since September 2023)</span>
+            <span class = "itemJob">Lead Programmer & Associate Designer (until September 2023)</span>
             <span class = "itemTime">May 2022 - Present</span>
             <p class = "itemDetail">Eco Resilience Global Games Research Group is a research endeavour headed by Professor Ruiz at Rensselaer Polytechnic Institute. From May 2022 to the present day, I worked to finalize development on VR Title, <a href="https://store.steampowered.com/app/1955040/The_Aquatic_Messenger/" alt="Link to view The Aquatic Messegner on Steam">The Aquatic Messenger</a> with performance optimizations, feature improvements, and testing.</p>
 			<p>More information <a href = "https://sites.google.com/view/eco-resilience/home">here</a></p>
