--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class = "about">
         <div class = "name">
             <h1>Charles Reverand</h1>
-            <span>RPI '24 Computer Science and Games and Simulation Arts and Sciences</span>
+            <span>Software Engineer I @ Verizon</span>
         </div>
         <div class = "info">
             <img alt = "A photo of Charles Reverand against a gray/black backdrop" src="img/profilepicture.jpg"/>
             <div>
-                Hiya! I'm a game programmer, focusing on gameplay scenarios. I also have experience in many other areas of game programming and design.
+                Hiya! I'm a full-stack programmer with Android and Spring experience. I also have experience in many areas of game programming and design.
             </div>
         </div>
     </div>
